--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Your Name
+title: Yanbo Zhang
 position: Ph.D. Student
 affiliation: Your Affiliation
 email: yourname (at) example.edu
