--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ remote_theme: yaoyao-liu/minimal-light
 # Basic Information 
 title: Yanbo Zhang
 position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+affiliation: Nanyang Technological University
+email: yanbozhang03@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
