--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # remote_theme: yaoyao-liu/minimal-light
 
 # Basic Information 
-title: Yanbo Zhang
+title: Yanbo
 position: Ph.D. Student
 affiliation: Nanyang Technological University
 email: yanbozhang03@gmail.com
