--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,22 @@
-# remote_theme: yaoyao-liu/minimal-light
 
 # Basic Information 
-title: Yanbo
+title: Yanbo Zhang
 position: Ph.D. Student
 affiliation: Nanyang Technological University
 email: yanbozhang03@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+keywords: Yanbo Zhang NTU
+description: Personal homepage of Yanbo Zhang
+canonical: https://yanbozhang003.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
+google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
 cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/
 linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
