--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Basic Information 
-title: Yanbo Zhang
+title: This page is under construction ...
 position: Ph.D. Student
 affiliation: Nanyang Technological University
 email: yanbozhang03@gmail.com
