--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,13 @@
 main:
 
-  - title: ABC
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
+  - title: General and Practical Wi-Fi based Hand-Writing Recognition
+    authors: <strong>Yanbo Zhang*</strong>, Weiping Sun, Mo Li
+    conference_short: TMC
+    conference: IEEE Transactions on Mobile Computing <strong>(TMC)</strong>, 2023.
+    pdf: ./assets/files/publications_pdf/WiRITE.pdf
+    code: https://yanbozhang003.github.io/
+    bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:trfhNyif0V4J:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCErWk:AFWwaeYAAAAAZaOCtWmyUOVsykJZLHu7gobgvwY&scisig=AFWwaeYAAAAAZaOCtVUGQqh6x5jqD_ruF8SIL70&scisf=4&ct=citation&cd=-1&hl=en
+    image: ./assets/img/publications_img/WiRITE.jpg
 
   - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
     authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
