--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -10,7 +10,7 @@ main:
     image: ./assets/img/publications_img/WiRITE.JPG
 
   - title: "Channel Adapted Antenna Augmentation for Improved Wi-Fi Throughput"
-    authors: <strong>Yanbo Zhang</strong>, Weiping Sun, Yidong Ren, Sung-ju Lee, and Mo Li
+    authors: <strong>Yanbo Zhang</strong>, Weiping Sun, Yidong Ren, Sung-ju Lee, Mo Li
     conference_short: TMC
     conference: IEEE Transactions on Mobile Computing <strong>(TMC)</strong>, 2022.
     pdf: ./assets/files/publications_pdf/WiRITE.pdf
@@ -18,3 +18,13 @@ main:
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:di9IUWx--KMJ:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCB034:AFWwaeYAAAAAZaOHy34o83qGyuTrJ_bceYMHLeA&scisig=AFWwaeYAAAAAZaOHy6l58jp0UvxVpibcs0CnrbY&scisf=4&ct=citation&cd=-1&hl=en
     image: ./assets/img/publications_img/WINAS.PNG
+
+    - title: "SWAN: Stitched Wi-Fi ANtennas"
+    authors: Yaxiong Xie, <strong>Yanbo Zhang</strong>, Jansen Christian Liando, Mo Li
+    conference_short: MobiCom
+    conference: Proceedings of the 24th Annual International Conference on Mobile Computing and Networking <strong>(MobiCom)</strong>, 2018.
+    pdf: ./assets/files/publications_pdf/SWAN.pdf
+    code: https://github.com/xieyaxiongfly/SWAN_src_AP
+    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
+    bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:V4PEMbqI4roJ:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCPJC8:AFWwaeYAAAAAZaOJPC8qlxiX0cJ3OIk6AHyzTtQ&scisig=AFWwaeYAAAAAZaOJPMU77axRMbxfl0a7YQa0_8I&scisf=4&ct=citation&cd=-1&hl=en
+    image: ./assets/img/publications_img/SWAN.PNG
