--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,7 +17,7 @@ main:
     code: https://yanbozhang003.github.io/
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:di9IUWx--KMJ:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCB034:AFWwaeYAAAAAZaOHy34o83qGyuTrJ_bceYMHLeA&scisig=AFWwaeYAAAAAZaOHy6l58jp0UvxVpibcs0CnrbY&scisf=4&ct=citation&cd=-1&hl=en
-    image: ./assets/img/publications_img/WINAS_padded.PNG
+    image: ./assets/img/publications_img/WINAS_padded.png
 
   - title: "SWAN: Stitched Wi-Fi ANtennas"
     authors: Yaxiong Xie, <strong>Yanbo Zhang</strong>, Jansen Christian Liando, Mo Li
@@ -27,4 +27,4 @@ main:
     code: https://github.com/xieyaxiongfly/SWAN_src_AP
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:V4PEMbqI4roJ:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCPJC8:AFWwaeYAAAAAZaOJPC8qlxiX0cJ3OIk6AHyzTtQ&scisig=AFWwaeYAAAAAZaOJPMU77axRMbxfl0a7YQa0_8I&scisf=4&ct=citation&cd=-1&hl=en
-    image: ./assets/img/publications_img/SWAN_padded.PNG
+    image: ./assets/img/publications_img/SWAN_padded.png
