--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ linkedin: https://www.linkedin.com/
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/avatar.png
-favicon: ./assets/img/favicon.png
-favicon_dark: ./assets/img/favicon-dark.png
+favicon: ./assets/img/favicon-yanbo.PNG
+favicon_dark: ./assets/img/favicon-yanbo.PNG
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
