--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # Basic Information 
-title: This page is under construction ...
-position: Ph.D. Student
+title: Yanbo Zhang
+position: Posdoctoral Research Fellow
 affiliation: Nanyang Technological University
-email: yanbozhang03@gmail.com
+email: zhang.yanbo@ntu.edu.sg
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
@@ -14,13 +14,13 @@ canonical: https://yanbozhang003.github.io/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
-linkedin: https://www.linkedin.com/
+cv_link: ./assets/files/CV/CV_Yanbo_English.pdf
+github_link: https://yanbozhang003.github.io/
+# linkedin: https://www.linkedin.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/avatar.png
+avatar: ./assets/img/profile/me.jpg
 favicon: ./assets/img/favicon-NTU.png
 favicon_dark: ./assets/img/favicon-NTU.png
 
