--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Basic Information 
-title: Yanbo Zhang (张延博)
+title: Yanbo Zhang (<span style="font-size: smaller;">张延博</span>)
 position: Posdoctoral Research Fellow
 affiliation: Nanyang Technological University
 email: zhang.yanbo@ntu.edu.sg
