--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Yanbo Zhang (张延博)
 position: Posdoctoral Research Fellow
 affiliation: Nanyang Technological University
-email: zhang.yanbo@ntu.edu.sg
+email: zhang.yanbo (at) ntu.edu.sg
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
