--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ canonical: https://yanbozhang003.github.io/
 google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
 cv_link: ./assets/files/CV/CV_Yanbo_English.pdf
 github_link: https://yanbozhang003.github.io/
-wechat_link: https://yanbozhang003.github.io/
+# wechat_link: https://yanbozhang003.github.io/
 # linkedin: https://www.linkedin.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
