--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -5,7 +5,7 @@ main:
     conference_short: TMC
     conference: IEEE Transactions on Mobile Computing <strong>(TMC)</strong>, 2023.
     pdf: ./assets/files/publications_pdf/WiRITE.pdf
-    code: https://yanbozhang003.github.io/
+    # code: https://yanbozhang003.github.io/
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:trfhNyif0V4J:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCErWk:AFWwaeYAAAAAZaOCtWmyUOVsykJZLHu7gobgvwY&scisig=AFWwaeYAAAAAZaOCtVUGQqh6x5jqD_ruF8SIL70&scisf=4&ct=citation&cd=-1&hl=en
     image: ./assets/img/publications_img/WiRITE.JPG
 
@@ -14,7 +14,7 @@ main:
     conference_short: TMC
     conference: IEEE Transactions on Mobile Computing <strong>(TMC)</strong>, 2022.
     pdf: ./assets/files/publications_pdf/WiRITE.pdf
-    code: https://yanbozhang003.github.io/
+    # code: https://yanbozhang003.github.io/
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:di9IUWx--KMJ:scholar.google.com/&output=citation&scisdr=ClFqvcr6EMGB8wCB034:AFWwaeYAAAAAZaOHy34o83qGyuTrJ_bceYMHLeA&scisig=AFWwaeYAAAAAZaOHy6l58jp0UvxVpibcs0CnrbY&scisf=4&ct=citation&cd=-1&hl=en
     image: ./assets/img/publications_img/WINAS_padded.png
