--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Basic Information 
 title: Yanbo Zhang (张延博)
-position: Posdoctoral Research Fellow
+position: Postdoctoral Research Fellow
 affiliation: Nanyang Technological University
 email: zhang.yanbo (at) ntu.edu.sg
 
