--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ canonical: https://yanbozhang003.github.io/
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?hl=en&tzom=-480&user=h58MNTYAAAAJ&view_op=list_works&gmla=AH70aAUsdKfG2X8qlilZ2Rh77ee7H_PYPQeeh8MMycO9e0eDY-0G9lbCHNcak0lwtLubpvzj-oyKI9DNFR54uSCw
 cv_link: ./assets/files/CV/Yanbo_CV2.pdf
-github_link: https://yanbozhang003.github.io/
+github_link: https://github.com/yanbozhang003
 # wechat_link: https://yanbozhang003.github.io/
 # linkedin: https://www.linkedin.com/
 
