--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,9 +4,9 @@ main:
     authors: <strong>Yanbo Zhang</strong>, Panrong Tong, Songfan Li, Yaxiong Xie, Mo Li
     conference_short: MobiSys'24
     conference: Proceedings of the 21st Annual International Conference on Mobile Systems, Applications and Services <strong>(MobiSys)</strong>, 2024.
-    pdf: ./assets/files/publications_pdf/WiRITE.pdf
-    code: https://github.com/yanbozhang003/WiRITE
-    bibtex: https://github.com/yanbozhang003/WiRITE/blob/main/Bibtex
+    pdf: ./assets/files/publications_pdf/AcFace.pdf
+    code: https://github.com/yanbozhang003/AcFace
+    # bibtex: https://github.com/yanbozhang003/WiRITE/blob/main/Bibtex
     image: ./assets/img/publications_img/AcFace.PNG
 
   - title: "WiRITE: General and Practical Wi-Fi based Hand-Writing Recognition"
