--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # Basic Information 
 title: Yanbo Zhang (张延博)
-position: Postdoctoral Research Fellow
-affiliation: Nanyang Technological University
-email: zhang.yanbo (at) ntu.edu.sg
+position: AIoT Research Scientist
+affiliation: Better IOT Solutions PTE. LTD. (Singapore)
+email: zhangyanbo AT better-iot.com.sg
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
