--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,7 @@ main:
     pdf: ./assets/files/publications_pdf/AcFace.pdf
     code: https://github.com/yanbozhang003/AcFace
     slides: ./assets/files/publications_pdf/acFace_slides_v2_pdf.pdf
-    bibtex: https://github.com/yanbozhang003/AcFace/blob/main/acm_3643832.3661855.bib
+    # bibtex: https://github.com/yanbozhang003/AcFace/blob/main/acm_3643832.3661855.bib
     image: ./assets/img/publications_img/AcFace2.png
 
   - title: "WiRITE: General and Practical Wi-Fi based Hand-Writing Recognition"
