--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ github_link: https://github.com/yanbozhang003
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/profile/me.jpg
+avatar: ./assets/img/profile/zybr.png
 favicon: ./assets/img/favicon-NTU.png
 favicon_dark: ./assets/img/favicon-NTU.png
 
