--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Basic Information 
 title: Yanbo Zhang (张延博)
-position: Co-Founder, AIoT Research Scientist
+position: Co-Founder, Research Scientist
 affiliation: Better IOT Solutions PTE. LTD. (Singapore)
 email: zhangyanbo AT better-iot.com.sg
 
