--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
 # Basic Information 
 title: Yanbo Zhang (张延博)
-position: Co-Founder, Research Scientist
-affiliation: Better IOT Solutions PTE. LTD. (Singapore)
+position: Post-doctoral Fellow, HKUST; Co-Founder, BITS Singapore
+# affiliation: Better IOT Solutions PTE. LTD. (Singapore)
 email: zhangyanbo AT better-iot.com.sg
 
 # Search Engine Optimization (SEO)
