--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # Basic Information 
 title: Yanbo Zhang (张延博)
-position: Post-doctoral Fellow, HKUST Co-Founder, BITS Singapore
+position: Post-doctoral Fellow, HKUST; Co-Founder, BITS Singapore
 # affiliation: Better IOT Solutions PTE. LTD. (Singapore)
-email: zhangyanbo AT better-iot.com.sg
+email: yanbozhang03 AT gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
