--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: yanbozhang03 AT gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: Yanbo Zhang NTU
+keywords: Yanbo Zhang NTU; Yanbo Zhang HKUST
 description: Personal homepage of Yanbo Zhang
 canonical: https://yanbozhang003.github.io/
 
