--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ github_link: https://github.com/yanbozhang003
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/profile/zybr.png
-favicon: ./assets/img/favicon-NTU.png
-favicon_dark: ./assets/img/favicon-NTU.png
+favicon: ./assets/img/UST.png
+favicon_dark: ./assets/img/UST.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
